WIP: adding linting testing coverage + cleaning existing published code for v0.2 release

--- a/packages/build-tools/build-styles/tests/basics/scss/partials/04-utilities/_utilities.all.scss
+++ b/packages/build-tools/build-styles/tests/basics/scss/partials/04-utilities/_utilities.all.scss
@@ -1,5 +1,7 @@
+/* stylelint-disable declaration-no-important  */
 @import 'utilities.test-hide';
 
 .u-test-show {
   display: block !important;
 }
+/* stylelint-enable */
