--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -4,7 +4,7 @@
 
 /* These are not up to date. */
 
-$palettes: (
+$bolt-palettes: (
   indigo: (
     xlight:  hsl(233, 100%, 90%), //#CCD2FF
     light:   hsl(233, 43%, 35%),  //#333C80
@@ -59,7 +59,7 @@ $palettes: (
     dark:    hsl(51, 80%, 45%)    //#CFB317
   ),
   black: (
-    initial: #16171A
+    initial: #16171a
   ),
   white: (
     initial: #ffffff
