--- a/packages/ui-toolkit/01-settings/settings-global/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-global/index.scss
@@ -2,26 +2,6 @@
   Global Settings
 \* ------------------------------------ */
 
-// $global-font-size: 16px;
-// $global-line-height: 1.5 * $global-font-size;
-// $global-border-radius: 4px;
-// $spacing-unit: 16px;
-// $spacing-unit-xxsmall: $spacing-unit * 0.125;
-// $spacing-unit-xsmall: $spacing-unit * 0.25;
-// $spacing-unit-small: $spacing-unit * 0.5;
-// $spacing-unit-medium: $spacing-unit;
-// $spacing-unit-large: $spacing-unit * 2;
-// $spacing-unit-xlarge: $spacing-unit * 4;
-// $global-page-max-width: 1200px;
-// $shadow-size: 0 0 5px;
-
 // Async font loading classes
-$fonts-subset-loaded-class: 'js-fonts-subset-loaded' !default;
-$fonts-loaded-class: 'js-fonts-loaded' !default;
-
-// $global-rootsize: 12;
-// $global-breakpoint-separator: \@ !default;
-
-
-// $golden-aside-width: 21.6447;
-// $golden-main-width: (100 - ($golden-aside-width*2));
+$bolt-fonts-subset-loaded-class: 'js-fonts-subset-loaded' !default;
+$bolt-fonts-loaded-class: 'js-fonts-loaded' !default;
