--- a/packages/ui-toolkit/02-tools/_tools.scrolling.scss
+++ b/packages/ui-toolkit/02-tools/_tools.scrolling.scss
@@ -1,13 +1,13 @@
-@mixin vertical-scroll
+@mixin bolt-vertical-scroll
 {
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
-@mixin horizontal-scroll
+@mixin bolt-horizontal-scroll
 {
-  overflow-y: hidden;
   overflow-x: auto;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
