--- a/packages/ui-toolkit/08-utilities/utilities-all/index.scss
+++ b/packages/ui-toolkit/08-utilities/utilities-all/index.scss
@@ -1,2 +1,4 @@
+/* stylelint-disable declaration-no-important  */
 @import '@bolt/utilities-spacing';
 @import '@bolt/utilities-widths';
+/* stylelint-enable */
