--- a/packages/ui-toolkit/01-settings/settings-font-family/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-font-family/index.scss
@@ -4,35 +4,35 @@
 ////
 
 
-/*------------------------------------*\
+/* ------------------------------------ *\
   Defining system and custom fonts
-\*------------------------------------*/
+\* ------------------------------------ */
 
 
 /*
  * System UI Fonts
  */
 
-$font-ui-default: -apple-system, BlinkMacSystemFont; // This maps to the system UI font.
-$font-ui-known: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans'; // This is for known system UI fonts and requires frequent updates.
+$bolt-font-ui-default: -apple-system, BlinkMacSystemFont; // This maps to the system UI font.
+$bolt-font-ui-known: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans'; // This is for known system UI fonts and requires frequent updates.
 
 
 /*
  * System font categories
  */
 
-$font-sans--system: $font-ui-default, $font-ui-known, 'Helvetica Neue', sans-serif;
-$font-serif--system: serif;
-$font-monospace--system: monospace;
+$bolt-font-sans--system: $font-ui-default, $font-ui-known, 'Helvetica Neue', sans-serif;
+$bolt-font-serif--system: serif;
+$bolt-font-monospace--system: monospace;
 
 
 /*
  * Custom font categories
  */
 
-$font-sans: 'Open Sans', 'Helvetica Neue', sans-serif;
-$font-serif: 'Georgia', serif;
-$font-monospace: 'Courier New', monospace;
+$bolt-font-sans: 'Open Sans', 'Helvetica Neue', sans-serif;
+$bolt-font-serif: 'Georgia', serif;
+$bolt-font-monospace: 'Courier New', monospace;
 
 
 /*
@@ -41,21 +41,19 @@ $font-monospace: 'Courier New', monospace;
 
 /// Bolt's definition of body, heading, and code text.
 /// @type Map
-$font-families: (
+$bolt-font-families: (
   font-families: (
     body: (
-      system: $font-sans--system,
-      custom: $font-sans
+      system: $bolt-font-sans--system,
+      custom: $bolt-font-sans
     ),
     heading: (
-      system: $font-sans--system,
-      custom: $font-sans
+      system: $bolt-font-sans--system,
+      custom: $bolt-font-sans
     ),
     code: (
-      system: $font-monospace--system,
-      custom: $font-monospace
+      system: $bolt-font-monospace--system,
+      custom: $bolt-font-monospace
     )
   )
 );
-
-
