--- a/packages/ui-toolkit/01-settings/settings-font-weight/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-font-weight/index.scss
@@ -6,38 +6,38 @@
 /// @group Settings: Typography
 /// @author Mike Mai
 ////
-$font-weight--regular:   400 !default;
-$font-weight--semibold:  700 !default;
-$font-weight--bold:      800 !default;
+$bolt-font-weight--regular: 400 !default;
+$bolt-font-weight--semibold: 700 !default;
+$bolt-font-weight--bold: 800 !default;
 
-@if ($font-weight--regular < 400){
+@if ($bolt-font-weight--regular < 400) {
   @error "Bolt's regular font weight can't be lighter than 400";
 }
 
-@if ($font-weight--bold < 700){
+@if ($bolt-font-weight--bold < 700) {
   @error "Bolt's bold font weight can't be lighter than 700";
 }
 
-@if ($font-weight--bold < $font-weight--regular){
-  @error "Sorry, but your bold font weight, `#{$font-weight--bold}` can't be lighter than your regular font weight, `#{$font-weight--regular}`!";
+@if ($bolt-font-weight--bold < $bolt-font-weight--regular) {
+  @error "Sorry, but your bold font weight, `#{$bolt-font-weight--bold}` can't be lighter than your regular font weight, `#{$bolt-font-weight--regular}`!";
 }
 
-@if ($font-weight--bold - $font-weight--regular < 300){
+@if ($bolt-font-weight--bold - $bolt-font-weight--regular < 300) {
   @error "Sorry, but your bold and regular font weights have values that are too close together. Please choose values that are at least 300 or more apart`!";
 }
 
-@if ($font-weight--bold - $font-weight--semibold < 100){
+@if ($bolt-font-weight--bold - $bolt-font-weight--semibold < 100) {
   @error "Sorry, but your bold and semi-bold font weights have values that are too close together. Please choose values that are at least 100 or more apart`!";
 }
 
 /// Bolt's definition of all options of possible text weights.
 /// @type Map
-$font-weights: (
+$bolt-font-weights: (
   font-weights: (
-    bold:     $font-weight--bold,
-    semibold: $font-weight--bold,
-    normal:   $font-weight--regular,
-    regular:  $font-weight--regular,
-    light:    $font-weight--regular
+    bold:     $bolt-font-weight--bold,
+    semibold: $bolt-font-weight--bold,
+    normal:   $bolt-font-weight--regular,
+    regular:  $bolt-font-weight--regular,
+    light:    $bolt-font-weight--regular
   )
 ) !default;
