--- a/packages/ui-toolkit/08-utilities/utilities-widths/index.scss
+++ b/packages/ui-toolkit/08-utilities/utilities-widths/index.scss
@@ -2,6 +2,8 @@
    #RESPONSIVE WIDTH UTILITIES
    ========================================================================== */
 
+/* stylelint-disable declaration-no-important  */
+
 // A mixin to spit out our width classes. Pass in the columns we want the widths
 // to have, and an optional suffix for responsive widths. E.g. to create thirds
 // and quarters for a small breakpoint:
@@ -9,15 +11,15 @@
 // @include widths(3 4, -sm);
 $bolt-width-sizes: 1 2 3 4 5 6 7 8 9 10 11 12 !default;
 
-@mixin widths($widths-columns, $widths-breakpoint: null) {
+@mixin widths($bolt-widths-columns, $bolt-widths-breakpoint: null) {
   // Loop through the number of columns for each denominator of our fractions.
-  @each $widths-denominator in $widths-columns {
+  @each $bolt-widths-denominator in $bolt-widths-columns {
     // Begin creating a numberator for our fraction up until we hit the
     // denominator.
-    @for $widths-numerator from 1 through $widths-denominator {
+    @for $bolt-widths-numerator from 1 through $bolt-widths-denominator {
       // Build a class in the format `.u-3/4` or `.u-3-of-4`.
-      .u-width-#{$widths-numerator}\/#{$widths-denominator}#{$widths-breakpoint} {
-        width: ($widths-numerator / $widths-denominator) * 100% !important;
+      .u-width-#{$bolt-widths-numerator}\/#{$bolt-widths-denominator}#{$bolt-widths-breakpoint} {
+        width: ($bolt-widths-numerator / $bolt-widths-denominator) * 100% !important;
       }
     }
   }
@@ -33,9 +35,10 @@ $bolt-width-sizes: 1 2 3 4 5 6 7 8 9 10 11 12 !default;
 @include widths($bolt-width-sizes);
 
 // Loop over our breakpoints
-@each $breakpoint in $breakpoints {
-  $breakpointName: nth($breakpoint, 1);
-  @include respond-to($breakpointName) {
-    @include widths($bolt-width-sizes, \@#{$breakpointName});
+@each $bolt-breakpoint in $bolt-breakpoints {
+  $bolt-breakpoint-name: nth($bolt-breakpoint, 1);
+  @include respond-to($bolt-breakpoint-name) {
+    @include widths($bolt-width-sizes, \@#{$bolt-breakpoint-name});
   }
 }
+/* stylelint-enable */
