fix: adding missing css file

--- a/packages/build-tools/build-styles/tests/basics/dest/style.css
+++ b/packages/build-tools/build-styles/tests/basics/dest/style.css
@@ -1,3 +1,4 @@
+/* Imports Settings, Base Elements, Components and Utilities via Globbing*/
 body {
   z-index: 42;
 }
@@ -6,6 +7,8 @@ body {
   padding: 12px;
 }
 
+/* stylelint-disable declaration-no-important  */
+/* stylelint-disable declaration-no-important  */
 .u-test-hide {
   display: none !important;
 }
@@ -13,3 +16,15 @@ body {
 .u-test-show {
   display: block !important;
 }
+
+/* stylelint-enable */
+/* @import "partials/04-utilities/utilities.all";*/
+/**/
+/* /Users/sghoweri/sites/bolt-design-system/bolt/packages/bolt-build-tools/styles/tests/basics/scss/partials/04-utilities*/
+/**/
+/**/
+/* packages/bolt-build-tools/styles/tests/basics/scss/partials/04-utilities/_utilities.all.scss*/
+/**/
+/* /Users/sghoweri/sites/bolt-design-system/bolt/packages/bolt-build-tools/styles/tests/basics/scss/partials/04-utilities/_utilities.all.scss*/
+/**/
+/* /Users/sghoweri/sites/bolt-design-system/bolt/packages/bolt-build-tools/styles/tests/basics/scss/partials/04-utilties/_utilties.all.scss*/
